<resources>
    <string name="app_name">DemoWeiXin6_0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_search">查找</string>
    <string name="menu_add_friend">添加朋友</string>
    <string name="menu_chat_group">发起群聊</string>
    <string name="menu_saoyisao">扫一扫</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="tab_friend_list">通讯录</string>
    <string name="tab_discover">发现</string>
    <string name="tab_me">我</string>
</resources>
